--- a/scr/asm-time-series-notebook.Rmd
+++ b/scr/asm-time-series-notebook.Rmd
@@ -87,6 +87,7 @@ boxplot(serie~floor(time(lnserie)), xlab='time (years)')
 boxplot(lnserie~floor(time(lnserie)), xlab='time (years)')
 ```
 
+The boxes seem to became smaller. 
 #### Is there a Seasonal Pattern?
 
 ```{r}
@@ -150,82 +151,73 @@ acf(d1lnserie,ylim=c(-1,1),lag.max=12*5,lwd=2,col=c(2,rep(1,3)), main ="ACF(seri
 ```
 
 The ACF appears to tail off slowly, rather than cutting off abruptly at one lag, which might indicate that the series has autoregressive (AR) behavior. We can see decreasing patterns (infinity lags not null). 
+In this context, makes sense that the price of the house deppends on the past price. 
 
 
 And the PACF is the following: 
 ```{r}
 pacf(d1lnserie,ylim=c(-1,1),col=c(rep(1,11),2),lwd=2,lag.max=12*6,main ="PACF(serie)")
 ```
+
 From the PACF, we observe that 
 
-we observe a significant last lag after which subsequent lags are nearly zero. This suggests that an AR(p) model may be appropriate. 
-
+we observe 
 Proposed models: 
 
-- ARIMA(1,1,0)
-- ARIMA(0,1,1) 
-- ARIMA(1,1,1)
-- ARIMA(2,1,0)
+- ARIMA(0,1,1) - AR(1) of the differentiation of the serie. 
+- ARIMA(1,1,1) - ARIMA ARMA model of the diff serie. 
+
+We suspected that our model has to have a AR component by the plots, therefore the series ARIMA(1,1,0) - MA(1) would not be considered. 
 
 ## 2. Estimation
 
-With the plot we observed some characteristics of the time series, but we will check wich is the best model numerically by trying to optimize the metrics: AIC (minimize), loglike () and BIC. 
+### a) Use R to estimate the identified models.
+With the plot we observed some characteristics of the time series, but we will check wich is the best model numerically by trying to optimize the metrics: AIC (minimize), loglike (maximize) and BIC (minimize). 
 
 Manually we can see that 
 ```{r}
-arima(d1lnserie, order = c(0, 1, 1)) 
-arima(d1lnserie, order = c(0,1,1))
-arima(d1lnserie, order = c(1,0,1))
-arima(d1lnserie, order = c(1,1,1))
+Arima(lnserie, order = c(1, 1, 0))  # AR(1)
+model1<-arima(lnserie, order = c(1, 1, 0))  # AR(1)
+
+Arima(lnserie, order = c(1,1,1)) # ARIMA(1,1)
+model2<-arima(lnserie, order = c(1,1,1))
 ```
-the best one is p=q=1 and d=0. 
+the best one is p=q=1 and d=1. 
 
-We will create a function that selects the best arima model varying the p ,d and q values. 
-
+## 3. Validation
 
 ```{r}
-
-library(forecast)
-library(parallel)
-library(doParallel)
-
-find_best_arima <- function(time_series, max_p = 8, max_q = 8, max_d = 1) {
-  cl <- makeCluster(detectCores() - 1)
-  registerDoParallel(cl)
-  
-  best_aic <- Inf
-  best_order <- c(NA, NA, NA)
-  best_model <- NULL
-  results <- foreach(p = 0:max_p, .combine = rbind, .packages = 'forecast') %:%
-            foreach(d = 0:max_d, .combine = rbind) %:%
-            foreach(q = 0:max_q, .combine = rbind) %dopar% {
-              try({
-                model <- arima(time_series, order = c(p, d, q))
-                c(aic = model$aic, p = p, d = d, q = q)
-              }, silent = TRUE)
-            }
-  stopCluster(cl)
-  best_result <- results[which.min(results[, 1]), ]
-  best_aic <- best_result[1]
-  best_order <- best_result[2:4]
-  return(list(best_order = best_order, best_aic = best_aic))
-}
-
-# Use the function to find the best model
-result <- find_best_arima(d1lnserie)
-
-# View the best model parameters
-result$best_order
-result$best_aic
-
-best_model <- arima(d1lnserie, order = c(5,0,8))
-best_model
+validation(model1)
+validation(model2)
 ```
 
+### a) Perform the complete analysis of residuals, justifying all assumptions made. Use the corresponding tests and graphical results. 
+
+##### Model 1. AR(1)
+Residual Analysis: The residuals do not seem to be autocorrelated, they seem to behave like white noise, therefore the model captures the structure of the data adequately. Seems to be 1 outlier bigger than in model 2. 
+QQ-plot: Data seems to be normal distributed because almost all the data follow the line.
+
+##### Model 2. ARIMA(1,1)
+Residual Analysis: The residuals do not seem to be autocorrelated, they seem to behave like white noise, therefore the model captures the structure of the data adequately. 
+QQ-plot: Data seems to be normal distributed because almost all the data follow the line.
 
 
+### b) Include analysis of the expressions of the AR and MA infinite models, discuss if they are causal and/or invertible and report some adequacy measures.
 
-```{r}
-validation(best_model)
-```
+##### Model 1. AR(1)
+The model is :
+- causal: because the inverse roots of AR lay inside the circle.
+- invertible: cannot apply because does not have an MA component. 
 
+
+##### Model 2. ARIMA(1,1)
+The model is 
+- causal because the inverse roots of AR lay inside the circle.
+- inverible because the inverse roots of MA lay inside the circle.
+
+
+### c) Check the stability of the proposed models and evaluate their capability of prediction, reserving the last 12 observations. 
+
+### d) Select the best model for forecasting. 
+
+We have seen that the model with the best AIC, loglike and BIC is ... Model. But to compare we will use RME, RSM forcasting error 
